test/errors/throw_main_panic.cy
throw error.boom

--cytest: error
--panic: error.boom
--
--main:1:1 main:
--throw error.boom
--^
--